# server/routes/connections/create.go
@@ -4,9 +4,10 @@ import (
 	"database/sql"
 	"github.com/gin-gonic/gin"
 	"github.com/go-my-admin/server/database"
+	"github.com/go-my-admin/server/routes/types"
 )
 
-type CreateConnectionRequest struct {
+type HandleCreateConnectionRequest struct {
 	Name     string `json:"common_name"`
 	DbName   string `json:"db_name"`
 	Host     string `json:"host"`
@@ -16,32 +17,41 @@ type CreateConnectionRequest struct {
 	SslMode  string `json:"ssl_mode"`
 }
 
+type HandleCreateConnectionResponse struct {
+	Error   bool   `json:"error"`
+	Message string `json:"message"`
+	Id      int    `json:"id"`
+}
+
 // HandleCreateConnection
 // @BasePath /
 // @Summary Create a connection
-// @Description Create a connection
+// @Description Creates a connection with the given parameters
+// @Authentication BearerToken
 // @Tags connections
 // @Accept json
 // @Produce json
-// @Param request body CreateConnectionRequest true "Request body"
-// @Success 200 {object} object "Returns the ID of the created connection"
-// @Failure 400 {object} object "Returns that the request body is invalid or that some required fields are missing"
-// @Failure 502 {object} object "If the connection could not be created"
-// @Failure 500 {object} object "Internal error"
+// @Param request body HandleCreateConnectionRequest true "Request body"
+// @Success 200 {object} HandleCreateConnectionResponse "The connection was created successfully"
+// @Failure 400 {object} types.ErrorResponse "The request body is invalid or that some required fields are missing"
+// @Failure 502 {object} types.ErrorResponse "Error creating connection"
+// @Failure 500 {object} types.ErrorResponse "Internal error"
 // @Router /connections/create [post]
 func HandleCreateConnection(c *gin.Context) {
-	var req CreateConnectionRequest
+	var req HandleCreateConnectionRequest
 	err := c.ShouldBindJSON(&req)
 	if err != nil {
-		c.JSON(400, gin.H{
-			"error": "Invalid request body",
+		c.JSON(400, types.ErrorResponse{
+			Error:   true,
+			Message: "Invalid request body",
 		})
 		return
 	}
 
 	if req.Name == "" || req.DbName == "" || req.Host == "" || req.Port == 0 || req.Username == "" || req.Password == "" {
-		c.JSON(400, gin.H{
-			"error": "Missing required fields",
+		c.JSON(400, types.ErrorResponse{
+			Error:   true,
+			Message: "Missing required fields",
 		})
 		return
 	}
@@ -59,8 +69,9 @@ func HandleCreateConnection(c *gin.Context) {
 	}
 
 	if err != nil {
-		c.JSON(502, gin.H{
-			"error": "Error creating connection: " + err.Error(),
+		c.JSON(502, types.ErrorResponse{
+			Error:   true,
+			Message: "Error creating connection: " + err.Error(),
 		})
 		return
 	}
@@ -69,16 +80,17 @@ func HandleCreateConnection(c *gin.Context) {
 	for rows.Next() {
 		err = rows.Scan(&id)
 		if err != nil {
-			c.JSON(500, gin.H{
-				"error": "Error scanning rows: " + err.Error(),
+			c.JSON(500, types.ErrorResponse{
+				Error:   true,
+				Message: "Error scanning connection: " + err.Error(),
 			})
 			return
 		}
 	}
 
-	c.JSON(200, gin.H{
-		"error":   false,
-		"message": "Connection created successfully",
-		"id":      id,
+	c.JSON(200, HandleCreateConnectionResponse{
+		Error:   false,
+		Message: "Connection created successfully",
+		Id:      id,
 	})
 }
