# server/routes/connections/test.go
@@ -6,15 +6,21 @@ import (
 	"github.com/go-my-admin/server/database"
 	"github.com/go-my-admin/server/database/types"
 	"github.com/go-my-admin/server/logger"
+	routeTypes "github.com/go-my-admin/server/routes/types"
 )
 
-type TestConnectionRequest struct {
+type HandleTestConnectionRequest struct {
 	DbName   string `json:"db_name"`
 	Host     string `json:"host"`
 	Port     int    `json:"port"`
 	Username string `json:"username"`
 	Password string `json:"password"`
 	SslMode  string `json:"ssl_mode"`
+}
+
+type HandleTestConnectionResponse struct {
+	Error   bool   `json:"error"`
+	Message string `json:"message"`
 }
 
 // HandleTestConnection
@@ -24,25 +30,27 @@ type TestConnectionRequest struct {
 // @Tags connections
 // @Accept json
 // @Produce json
-// @Param request body TestConnectionRequest true "Request body"
-// @Success 200 {object} object "Returns if the connection could be established or not"
-// @Failure 400 {object} object "Returns that the request body is invalid or that some required fields are missing"
-// @Failure 402 {object} object "If the connection could not be established"
-// @Failure 500 {object} object "Internal error"
+// @Param request body HandleTestConnectionRequest true "Request body"
+// @Success 200 {object} HandleTestConnectionResponse "The connection was tested successfully"
+// @Failure 400 {object} types.ErrorResponse "The request body is invalid or that some required fields are missing"
+// @Failure 402 {object} types.ErrorResponse "Connection could not be established"
+// @Failure 500 {object} types.ErrorResponse "Internal error"
 // @Router /connections/test [post]
 func HandleTestConnection(c *gin.Context) {
-	var req TestConnectionRequest
+	var req HandleTestConnectionRequest
 	err := c.ShouldBindJSON(&req)
 	if err != nil {
-		c.JSON(400, gin.H{
-			"error": "Invalid request body",
+		c.JSON(400, routeTypes.ErrorResponse{
+			Error:   true,
+			Message: "Invalid request body",
 		})
 		return
 	}
 
 	if req.DbName == "" || req.Host == "" || req.Port == 0 || req.Username == "" || req.Password == "" {
-		c.JSON(400, gin.H{
-			"error": "Missing required fields",
+		c.JSON(400, routeTypes.ErrorResponse{
+			Error:   true,
+			Message: "Missing required fields",
 		})
 		return
 	}
@@ -71,16 +79,16 @@ func HandleTestConnection(c *gin.Context) {
 	}(connection.Cnx)
 
 	if err != nil {
-		c.JSON(402, gin.H{
-			"error":   true,
-			"success": "Connection could not be established",
+		c.JSON(402, routeTypes.ErrorResponse{
+			Error:   true,
+			Message: "Connection could not be established",
 		})
 		return
 	}
 
-	c.JSON(200, gin.H{
-		"error":   false,
-		"success": "Connection established",
+	c.JSON(200, HandleTestConnectionResponse{
+		Error:   false,
+		Message: "Connection tested successfully",
 	})
 
 }
