# server/routes/types/errorResponse.go
@@ -1,0 +1,6 @@
+package types
+
+type ErrorResponse struct {
+	Error   bool   `json:"error"`
+	Message string `json:"message"`
+}
